Buf fixes, new features added

--- a/acwg.textcss/acwg.textcss.css
+++ b/acwg.textcss/acwg.textcss.css
@@ -28,7 +28,7 @@ html, body {
 /* Font colors */
 .clr-black {color:#000;}
 .clr-white {color:#fff;}
-.clr-gray {color:#6b6b6b;}
+.clr-gray {color:#878787;}
 .clr-darkgray {color:#363636;}
 .clr-lightgray {color:#c2c2c2;}
 
@@ -52,16 +52,16 @@ html, body {
 .clr-lazure {color:#3bdfb3;}
 .clr-teal {color:#02f2de;}
 
-.clr-violet {color:#ab1ec5;}
-.clr-lightviolet {color:#e15ff9;}
-.clr-darkviolet {color:#4e005c;}
+.clr-violet {color:#5a5a94;}
+.clr-lightviolet {color:#b6549f;}
+.clr-darkviolet {color:#50508d;}
 
 
 /* Alignments */
 .alg-center {text-align:center;}
 .alg-right {text-align:right;}
 .alg-left {text-align:left;}
-.alg-left {text-align:justify;}
+.alg-just {text-align:justify;}
 
 .pdng-0 {padding:0px;}
 .pdng-5 {padding:5px;}
@@ -95,10 +95,10 @@ html, body {
 .pdng-bottom-5 {padding-bottom:25px;}
 
 .pdng-30 {padding:30px;}
-.pdng-left-5 {padding-left:30px;}
-.pdng-right-5 {padding-right:30px;}
-.pdng-top-5 {padding-top:30px;}
-.pdng-bottom-5 {padding-bottom:30px;}
+.pdng-left-30 {padding-left:30px;}
+.pdng-right-30 {padding-right:30px;}
+.pdng-top-30 {padding-top:30px;}
+.pdng-bottom-30 {padding-bottom:30px;}
 
 
 .mgn-0 {margin:0px;}
@@ -122,10 +122,10 @@ html, body {
 .mgn-bottom-15 {margin-bottom:15px;}
 
 .mgn-20 {margin:20px;}
-.mgn-left-5 {margin-left:20px;}
-.mgn-right-5 {margin-right:20px;}
-.mgn-top-5 {margin-top:20px;}
-.mgn-bottom-5 {margin-bottom:20px;}
+.mgn-left-20 {margin-left:20px;}
+.mgn-right-20 {margin-right:20px;}
+.mgn-top-20 {margin-top:20px;}
+.mgn-bottom-20 {margin-bottom:20px;}
 
 .mgn-25 {margin:25px;}
 .mgn-left-25 {margin-left:25px;}
@@ -145,3 +145,22 @@ html, body {
 .txt-shadowlight {text-shadow: 0px 0px 15px #5d5d5d;}
 .txt-bold {font-weight:bolder;}
 .txt-curs {font-style: italic;}
+
+
+/* services */
+div.scrollup {
+    position:fixed; right:10px; bottom:10px;
+    padding: 4px 10px;
+    border-radius:20px;
+    cursor:pointer;
+    display:none;
+    text-align:center;
+    color:white;
+    background-color: #b6549f;
+    font-size:16pt;
+    z-index:15000; transition:1s;
+}
+
+div.scrollup:hover {
+    background-color:#50508d; transition:1s;
+}
